# api/server/routes/extract/extract.go
@@ -9,13 +9,27 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// ExtractParams contains all the bound params for the extract operations
+// typically these are obtained from a http.Request
+//
+// swagger:parameters getExtractDsc
+type ExtractParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	// Parameters for the extract operation
+	// in: body
+	Body *cmd.Config
+}
+
 func extractDSC(c *gin.Context) {
-	var query cmd.Config
+	var query ExtractParams
 	if err := c.BindQuery(&query); err != nil {
 		c.IndentedJSON(http.StatusBadRequest, err)
 		return
 	}
-	artifacts, err := cmd.DSC(&query)
+	artifacts, err := cmd.DSC(query.Body)
 	if err != nil {
 		c.AbortWithError(http.StatusInternalServerError, err)
 		return
